# ecube

./: .dockerignore  .env.example  .gitignore  COPYRIGHT  LICENSE  NOTICE  None  README.md  alembic.ini  demo-metadata.json  docker-compose.dev.yml  docker-compose.ecube-host.yml  docker-compose.ecube-win.yml  docker-compose.ecube.yml  docker-compose.integration.yml  docker-compose.postgresql.yml  docker-compose.test.yml  docker-compose.windows-dev.yml  install.sh  pyproject.toml  release_latest_build.bat  release_latest_build.sh  schemathesis-output.txt
.cursor/: rules
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md  release.yml
alembic/: env.py
app/: __init__.py  auth.py  auth_providers.py  build_info.py  config.py  constants.py  database.py  demo_bootstrap.py  dependencies.py  exceptions.py  logging_config.py  main.py  openapi.py  routing.py  session.py  setup.py  spa.py
demo-data/: .ecube-demo-seed.json  README.txt  demo-metadata.json
deploy/: ecube-pam  ecube-sudoers  ecube-write-pwquality-conf
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  playwright.local.config.js  playwright.local.js  vite.config.js  vitest.config.js
postman/: ecube-postman-collection.json
scripts/: build-help.mjs  check_postman_collection.py  check_release_migration.py  copy_path_diagnostic.py  generate_dbml_schema.py  generate_release_compose.py  package-local.sh  post_install_demo_setup.sh  print_demo_usb_seed_json.sh  run_newman_smoke.sh  run_schemathesis.sh  (+3 more)
website/: CNAME  (+4 more)
(+575 files in other folders)
