[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "ecube"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "PyJWT[crypto]>=2.7.0",
    "python-pam>=2.0.0",
    "six>=1.16.0",
    "itsdangerous>=2.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
ecube-setup = "app.setup:main"

[project.optional-dependencies]
redis = [
    "redis>=4.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "openpyxl>=3.1.0",
    "redis>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
